# lxqt

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  README  README.md  build_all.sh  build_all_autotools_projects.sh  build_all_cmake_projects.sh  changelog.sh  clean_all_cmake_projects.sh  cmake_repos.list  create_tarballs.sh  lxqt-build-tools-config.cmake.in  lxqt-transupdate  release.sh  uninstall_all_cmake_projects.sh
compton-conf/: AUTHORS  CHANGELOG  CMakeLists.txt  README.md  compton-conf.cpp  compton-conf.desktop.in  compton-conf.h  compton.conf.example  maindialog.cpp  maindialog.h  maindialog.ui
compton-conf/autostart/: lxqt-compton.desktop.in
compton-conf/translations/: CMakeLists.txt  compton-conf.ts  compton-conf_arn.ts  compton-conf_ast.ts  compton-conf_be.ts  compton-conf_ca.desktop  compton-conf_ca.ts  compton-conf_cs.desktop  compton-conf_cs.ts  compton-conf_cy.ts  compton-conf_da.desktop  compton-conf_da.ts  compton-conf_de.desktop  compton-conf_de.ts  compton-conf_el.ts  compton-conf_en_GB.ts  compton-conf_es.desktop  compton-conf_es.ts  compton-conf_eu.ts  compton-conf_fil.ts  compton-conf_fr.desktop  compton-conf_fr.ts  compton-conf_gl.desktop  compton-conf_gl.ts  compton-conf_he.ts  compton-conf_hi.ts  compton-conf_hu.desktop  compton-conf_hu.ts  compton-conf_id.ts  compton-conf_it.desktop  compton-conf_it.ts  compton-conf_ja.desktop  compton-conf_ja.ts  compton-conf_km_KH.desktop  compton-conf_km_KH.ts  compton-conf_ko.ts  compton-conf_lt.desktop  compton-conf_lt.ts  compton-conf_lv.ts  compton-conf_nb_NO.ts  (+17 more)
libfm/: AUTHORS  Makefile.am  Makefile.decl  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.ac  libfm-extra.pc.in  libfm-gtk.pc.in  libfm-gtk3.pc.in  libfm.pc.in
libfm-qt/: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  Doxyfile.in  README.md
libfm-qt/cmake/: fm-qt-config.cmake.in
libfm-qt/data/: CMakeLists.txt  archivers.list  libfm-qt-mimetypes.xml  terminals.list
libfm-qt/src/: CMakeLists.txt  app-chooser-dialog.ui  appchoosercombobox.cpp  appchoosercombobox.h  appchooserdialog.cpp  appchooserdialog.h  applaunchcontext.cpp  applaunchcontext.h  appmenuview.cpp  appmenuview.h  appmenuview_p.h  bookmarkaction.cpp  bookmarkaction.h  browsehistory.cpp  browsehistory.h  cachedfoldermodel.cpp  cachedfoldermodel.h  colorbutton.cpp  colorbutton.h  createnewmenu.cpp  createnewmenu.h  customaction_p.h  dirtreemodel.cpp  dirtreemodel.h  dirtreemodelitem.cpp  dirtreemodelitem.h  dirtreeview.cpp  dirtreeview.h  dndactionmenu.cpp  dndactionmenu.h  dnddest.cpp  dnddest.h  edit-bookmarks.ui  editbookmarksdialog.cpp  editbookmarksdialog.h  exec-file.ui  execfiledialog.cpp  execfiledialog_p.h  file-operation-dialog.ui  file-props.ui  (+71 more)
libfm/checks/: README  (+2 more)
liblxqt/: .translation-update  AUTHORS  CHANGELOG  CMakeLists.txt  README.md  liblxqt.doxygen  lxqtapplication.cpp  lxqtapplication.h  lxqtautostartentry.cpp  lxqtautostartentry.h  lxqtbacklight.cpp  lxqtbacklight.h  lxqtglobals.h  lxqtgridlayout.cpp  lxqtgridlayout.h  lxqthtmldelegate.cpp  lxqthtmldelegate.h  lxqtnotification.cpp  lxqtnotification.h  lxqtnotification_p.h  lxqtplugininfo.cpp  lxqtplugininfo.h  lxqtpowermanager.cpp  lxqtpowermanager.h  lxqtprogramfinder.cpp  lxqtprogramfinder.h  lxqtrotatedwidget.cpp  lxqtrotatedwidget.h  lxqtscreensaver.cpp  lxqtscreensaver.h  lxqtsettings.cpp  lxqtsettings.h  lxqtsingleapplication.cpp  lxqtsingleapplication.h  lxqttranslator.cpp  lxqttranslator.h
libqtxdg/: .gitignore  .mailmap  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
libsysstat/: AUTHORS  CHANGELOG  CMakeLists.txt  README.md  basestat.cpp  basestat_p.h  cpustat.cpp  cpustat.h  cpustat_p.h  memstat.cpp  memstat.h  memstat_p.h  netstat.cpp  netstat_p.h  sysstat.pro  sysstat_global.h  version.cpp  version_p.h
lximage-qt/: .gitignore  .translation-update  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
lxmenu-data/: .gitignore  AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.ac  rename.py
lxqt-about/: AUTHORS  CHANGELOG  CMakeLists.txt  README.md  main.cpp
lxqt-admin/: .gitignore  .translation-update  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
lxqt-archiver/: .translation-update  AUTHORS  CHANGELOG  CMakeLists.txt  CMakeLists.txt.user.6b8adda  README.md
lxqt-config/: .gitignore  .translation-update  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
lxqt-globalkeys/: .mailmap  .translation-update  CHANGELOG  CMakeLists.txt  README.md
lxqt-openssh-askpass/: CHANGELOG  CMakeLists.txt  README.md
lxqt-panel/: .gitignore  .translation-update  .travis.yml  CHANGELOG  CMakeLists.txt  README.md
lxqt-policykit/: CHANGELOG  CMakeLists.txt  README.md
lxqt-powermanagement/: .gitignore  .translation-update  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
lxqt-qtplugin/: AUTHORS  CHANGELOG  CMakeLists.txt  README.md
lxqt-runner/: .gitignore  .translation-update  AUTHORS  CHANGELOG  CMakeLists.txt  README.md  commanditemmodel.cpp  commanditemmodel.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mylistview.h  providers.cpp  providers.h  virtualbox-icons.qrc  widgets.cpp  widgets.h  yamlparser.cpp  yamlparser.h
lxqt-session/: .translation-update  CHANGELOG  CMakeLists.txt  README.md  startlxqt.1  startlxqt.in
lxqt-sudo/: AUTHORS  CHANGELOG  CMakeLists.txt  README.md  main.cpp  passworddialog.cpp  passworddialog.h  passworddialog.ui  sudo.cpp  sudo.h
lxqt-themes/: AUTHORS  CHANGELOG  CMakeLists.txt  CMakeLists.txt.user.6b8adda  README.md
menu-cache/: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  autogen.sh  configure.ac
obconf-qt/: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
pavucontrol-qt/: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
pcmanfm-qt/: .translation-update  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CMakeLists.txt.user.cfa1b76  CMakeLists.txt.user.e059108  Doxyfile.in  README.md  pcmanfm-qt.1.in
qps/: .clang-format  .gitignore  .mailmap  .translation-update  CHANGELOG  CMakeLists.txt  LICENSE.QPL  README.md  qps.1  qps.desktop.in  qps.qrc
(+5429 files in other folders)
